--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,22 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css"
+    />
+
     <title>Consulta CEP</title>
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script>
+    <script src="https://open.mapquestapi.com/sdk/leaflet/v2.2/mq-map.js?key=IXeUegckPazCD4BEWR2CHZ494kZQdwBI"></script>
+    <script src="https://open.mapquestapi.com/sdk/leaflet/v2.2/mq-routing.js?key=IXeUegckPazCD4BEWR2CHZ494kZQdwBI"></script>
   </body>
 </html>
